--- a/layout/layout.html
+++ b/layout/layout.html
@@ -30,5 +30,7 @@
         </div>
         <script type="text/javascript" src="/layout/js/swig.pack.min.js"></script>
         <script type="text/javascript" src="/layout/js/main.js"></script>
+        <script type="text/javascript" src="/layout/js/registerUser_form.js"></script>
+        
     </body>
 </html>
